# rust-adventure

./: .envrc  .gitignore  .yamlfmt.yml  Cargo.toml  LICENSE  Makefile  flake.nix
.github/: renovate.json
.github/workflows/: ci-nix.yml  ci.yml
examples/: multiple-rules.yaml  package-image.yml
lib/linkage/: Cargo.toml
lib/linkage/src/: lib.rs  linkage.rs
lib/maps/: Cargo.toml
lib/maps/src/: lib.rs  map.rs
lib/schema/: Cargo.toml
lib/schema/src/: lib.rs  simple.rs  veggies.rs
rust-testing-lib/: Cargo.toml
rust-testing-lib/src/: lib.rs
schema/: id-or-name.schema.json  package-image.schema.json  simple.schema.json  veggies.schema.json
schema-lib/: Cargo.toml
schema-lib/src/: lib.rs
site/: index.js  package-lock.json  package.json
src/: first.rs  info.rs  lib.rs  link.rs  main.rs
www/: package-lock.json  package.json  webpack.config.js
