[package]
name = "appz"
version = "0.0.1"
authors = ["Allen Conlon <allen@conlon.dev>"]
edition = "2021"
license = "MIT"
description = "Playground"

[dependencies]
actix-web.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true

# libraries
linkage-lib = { path = "lib/linkage" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = ["lib/linkage", "lib/maps", "lib/schema"]

[workspace.package]
authors = ["Allen Conlon <allen@conlon.dev>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
validator = { version = "0.18.1", features = ["derive"] }
