[package]
name = "package"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Playground"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
docker_credential = "1.3.1"
oci-client = { version = "0.14.0", default-features = false }
oci-spec = "0.7.0"
reqwest = { version = "0.12.9", features = [ "json", "stream",] }
serde = { version = "1.0.214", features = ["serde_derive", "rc"] }
serde_json = "1.0.132"
sigstore = "0.10.0"
tokio = { version = "1.41.0", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.40", features = ['log'] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.package]
authors = ["Allen Conlon <allen@conlon.dev>"]
edition = "2021"
license = "MIT"
